<resources>

    <string name="app_name">깐부</string>

    <!-- 스플래시 화면 -->
    <string name="kkanbu_korean">깐 부</string>
    <string name="kkanbu_english">KKANBU</string>
    <string name="foreigner_essential_app">외국인 유학생 필수정보 앱</string>

    <!-- 로그인 화면 -->
    <string name="login_guide">외국인 유학생에게 필요한 모든 정보가 있습니다.</string>
    <string name="login_with_kakao">카카오로 로그인하기</string>

    <string name="kakao_login_failed">카카오 로그인 실패</string>
    <string name="kakao_access_success">카카오 로그인</string>
    <string name="other_error">기타 에러</string>
    <string name="invalid_error">유효하지 않은 앱</string>
    <string name="access_denied">접근이 거부 됨(동의 취소)</string>
    <string name="request_parameter_error">요청 파라미터 오류</string>
    <string name="can_not_authentication">인증 수단이 유효하지 않아 인증할 수 없는 상태</string>
    <string name="invalid_scope_id">유효 하지 않은 scope ID</string>
    <string name="setting_not_right">설정이 올바르지 않음(android key hash)</string>
    <string name="server_internal_error">서버 내부 에러</string>
    <string name="not_have_request_permission">앱이 요청 권한이 없음</string>
    <string name="kakao_data_binding_failed">카카오 데이터 바인딩 실패</string>

    <!-- 회원가입 화면 -->
    <string name="gender_info_can_not_change">성별 정보는 추후 변경하실 수 없습니다.</string>
    <string name="write_correctly">정확히 작성해주세요</string>
    <string name="male_with_korean"> 남성 | Male</string>
    <string name="female_with_korean"> 여성 | Female</string>

    <string name="confirm">확인</string>

    <string name="campus_major">학교 전공</string>
    <string name="write_campus_major">학과 전공을 입력해주세요</string>
    <string name="write_major">전공을 입력해주세요</string>

    <string name="select_nation">현재 국적을 선택해 주세요.</string>

    <string name="korea_with_korean"> 한국 | Korea</string>
    <string name="china_with_korean"> 중국 | China</string>
    <string name="vietnam_with_korean"> 베트남 | Vietnam</string>
    <string name="mongolia_with_korean"> 몽골 | Mongolia</string>
    <string name="uzbekistan_with_korean"> 우즈베키스탄 | Uzbekistan</string>


    <string name="write_self_introduce">자기소개 작성</string>

    <!-- 홈 화면 -->
    <string name="back_press_exit_guide">한번 더 누르면 앱이 종료됩니다.</string>

    <!-- Preview Fragment -->
    <string name="preview_title">깐부 KKANBU</string>
    <string name="seoultech">서울과학기술대학교</string>
    <string name="recent_board">최근 게시글</string>

    <!-- Board Fragment -->
    <string name="board">게시판</string>
    <string name="recent_order">최신순</string>
    <string name="korean_language">한국어</string>
    <string name="post_board">게시글 쓰기</string>
    <string name="question">질문</string>
    <string name="my_intel">내 정보</string>

    <!-- My Profile Fragment -->
    <string name="logout">로그아웃</string>
    <string name="university">대학</string>
    <string name="major">전공</string>
    <string name="gender">성별</string>
    <string name="nation">국적</string>
    <string name="check_logout">로그아웃 하시겠습니까?</string>
    <string name="logout_fail">로그아웃 실패</string>
    <string name="yes">예</string>
    <string name="no">아니요</string>

    <string name="korea_korean">한국</string>
    <string name="korea_english">Korea</string>

    <string name="china_korean">중국</string>
    <string name="china_english">China</string>

    <string name="vietnam_korean">베트남</string>
    <string name="vietnam_english">Vietnam</string>

    <string name="mongolia_korean">몽골</string>
    <string name="mongolia_english">Mongolia</string>

    <string name="uzbekistan_korean">우즈베키스탄</string>
    <string name="uzbekistan_english">Uzbekistan</string>

    <!-- My Profile Revise Fragment -->
    <string name="profile_revise">프로필 수정</string>
    <string name="self_introduce">자기소개</string>
    <string name="revise">수정</string>
    <string name="revise_complete">수정이 완료되었습니다.</string>

    <!-- Community Fragment -->
    <string name="post_comment">댓글 작성하기</string>

    <!-- Community Edit Fragment -->
    <string name="post_revise">게시물 수정</string>
    <string name="revise">수정하기</string>


</resources>